--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1"
+    "@fontsource-variable/nunito": "5.2.7",
+    "@fontsource/poppins": "5.2.7",
+    "@midudev/tailwind-animations": "0.2.0",
+    "@tailwindcss/vite": "4.1.14",
+    "astro": "5.14.1",
+    "tailwindcss": "4.1.14"
   }
 }
